--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ raw_data/
 *.csv
 **/__pycache__/
 .env
+Untitled.ipynb
+Untitled1.ipynb
+Untitled2.ipynb
+requirements_prod.txt
+.env.yaml
+tests/
+docker_build.txt
